--- a/user_guide_0.9.wikitext
+++ b/user_guide_0.9.wikitext
@@ -146,13 +146,13 @@ configuration aspects.
 
 = Tasks =
 
-==Build paths configuration==
+==Configurig Build paths==
 
-In order to use propoperly remote debugging, you
+In order to run propoperly your scripts, you
 '''must care about paths'''. In our case, there are several kind of them
 to consider:
-* Project path
-* Runtime path
+* Project path, used by the IDE to perform tooling, can be also called ''source path''
+* Runtime path, used to run the script
 
 ===Project path===
 
@@ -164,15 +164,17 @@ configured in Build Path.
 
 [[Image:BuildPath.png|center]]
 
-===Runtime path===
+===Runtime paths===
 
-Once your program is ready, you might try '''Remote debugging'''. You
-'''must''' ensure beforehand that all the projects you depend on are in
-''Lua path''. The configuration of this path is not detailed here since
+The runtime paths are composed of the system variables LUA_PATH, LUA_CPATH, LD_LIBRARY and LUA binary path in the PATH variable.
+Theses paths can be set on the target computer where the lua script will run.
+Theses paths can also set by the launch configurations on the process or target where the script will run.
+The runtime path is dependent on witch kind of launch configuration you use.
+The configuration of theses paths is not detailed here since
 it is highly dependent on how you are managing paths in your own
 environment.
 
-== Manage Execution Environments ==
+== Managing Execution Environments ==
 
 To find preferences related to ''EE'', go to
 ''Window > Preferences > Lua > Execution Environments'' and you will
@@ -211,13 +213,22 @@ It is now linked to selected project.
 [[Image:EeAddedToProject.png|center]]
 
 
-== Interpreters ==
+== Managing Interpreters ==
 
-To run Lua scripts in LDT, you have to configure a least one Lua
-interpreter to run your code. To configure an interpreter you just need
-the path of the interpreter executable, then you can set interpreter
-arguments and set some environment variables. Interpreters are used by
-Run Launch Configuration to execute the code.
+Interpreter are use by LDT to run scripts on the local computer. 
+
+=== Embedded Interpreters ===
+
+An embedded interpreter is an interpreter deliver with LDT. You can reconize the interpreter preference page, the location is set as ''(embedded)''.
+Currently, LDT is deliver with the JNLua embedded interpreter, JNLua is Java implementation of Lua.
+
+You can override an embedded interpreter by creating a new one with the same name.
+
+=== Local Interperters ===
+
+To run Lua scripts in LDT using the Lua Local Application launch configuration using a local installed Lua interpreters, you have to configure an interpreter.
+To configure an interpreter you just need the path of the interpreter executable, then you can set interpreter
+arguments and set some environment variables.
 
 See below how to reference a Lua interpreter installed on your machine,
 and use it in LDT.
@@ -238,87 +249,25 @@ Then, press the ''Add...'' button to configure a new interpreter and fill in the
 Once you press the ''Ok'' button, the created interpreter appears in the Interpreters page. The checkbox in front of each interpreter allows to check the default interpreter used in launch configurations.
 [[Image:CreatedInterpreter.png|center]]
 
-== Debugging a Lua program  ==
+== Configuring debug sessions ==
 
-=== Breakpoints, code navigation  ===
+== Local session ==
 
-You can set breakpoints at a particular file/line, you can do it with the regular double-click on margin: 
+Create a Lua Application launch configuration in the debug configuration menu.
+[[Image:CreatedInterpreter.png|center]]
 
-[[Image:Dbg-setbreakpoint.png|center]] 
+In the ''Main'' tab, you can select the project and the script you want to launch.
+[[Image:CreatedInterpreter.png|center]]
 
-You can optionally indicate conditions to stop execution only under specific circumstances: 
+In the ''Interpreter'' tab, you can select your own interpreter.
+[[Image:CreatedInterpreter.png|center]]
 
-[[Image:Dbg-openproperties.png|center]] 
+In the "Arguments" tab, you can specify interpreter arguments and script arguments.
+The interperter arguments will be merged to the ones specified at the interpreter level (in the interpreter preference page) at runtime.
 
-[[Image:Dbg-properties.png|center]] 
+== Attach session ==
 
-#Enable or disable breakpoint globally<br> 
-#Condition on hit count (stop only after the 3rd hit, every 4 hits, etc.) 
-#Conditional breakpoint: you can put any expression, it will be evaluated using the local scope every time the breakpoint is hit, and stop only when the expression evaluates to true.
-
-Once a breakpoint has been hit, and the execution has actually stopped, you can use the '''Step Into''', '''Step Over''' and '''Step Return''' commands. 
-
-{{tip|Coroutine handling|When the current instruction is a <tt>coroutine.yield</tt> or a <tt>coroutine.resume</tt> step over will jump over the coroutine until the next resume or yield whereas step into will go into the coroutine and re-break as soon as possible.}}
-
-=== Environment inspection  ===
-
-When a breakpoint is reached, you can see any variable visible from any stack frame (local, upvalue and global variables). You can also change values to another.<br> 
-
-[[Image:Dbg-variables.png|center]] 
-
-{{Tip|New values are expressions|When you set a new value, it is evaluated as an expression, so <tt>math.sqrt</tt> will be evaluated to a function, if you want to put a literal string, use Lua syntax: <tt>"math.sqrt"</tt>. In particular you can change an entire table by another table expression. This is sometimes powerful and sometimes dangerous, be careful with that.}} 
-
-Some ''special'' values can also be displayed such as metatables or function environments (if it is different from global environment). You can also change these values.
-
-=== Interactive console and expressions  ===
-
-In addition to variable view, you have two other useful tools to evaluate some code snippets: expressions view and interactive console.<br> 
-
-[[Image:Dbg-expressions.png|frame|center|The expressions view allows you to re-evaluate complex expressions at each step]] 
-
-[[Image:Dbg-repl.png|frame|center|The interactive console allows you to type statements under the local scope]] 
-
-{{Warning|Always on top level|Due to a limitation in the DBGp protocol, the interactive console and expressions are always mapped to the top stack frame}}
-
-=== Source Mapping  ===
-The DBGp Server (IDE) and the DBGp client (running application) need to communicate about source files.<br/>
-''E.g. When you set a breakpoint, the IDE need to say to the running application on which file the breakpoint must be added.''<br/>
-''E.g. When the running application stops on a breakpoint of a file, the IDE must retrieve the file and open it.''<br/>
-
-The problem is that the file executed in your Lua VM could be physically different than the source file in your IDE (in your workspace).
-For example, in the case where your code is executed on a different host or just if your executed code is duplicated in another folder.
-
-To resolve this problem, LDT proposes to you different strategies, each with advantages and drawbacks :
- 
-* '''Local Resolution'''
-This way to resolve the source mapping is the more simple and the more reliable. Both client and server works with absolute path. The IDE will search only in its buildpath a file which have the given absolute path. This means that executed file should be in your workspace (in your buildpath more exactly). So you can not use it to debug code on a remote host.
-
-* '''Module Resolution'''
-Both IDE and application have their own way to retrieve a module from its name. So we could use the module name has file ID instead of path.
-With this mode, you could do remote debugging without settin a list of path mapping.
-The limitation is that you should use the standard lua_path way to load module. 
-Another problem is that we could not really retrieve the module name at client side, because the Lua debug api uses source path. The module name is retrieved from the path (from debug.getinfo) and the lua_path (package.path). so with ambiguous lua_path you could have insolvable conflict.<br/>
-''E.g: with <code>package.path = "/foo/bar/?.lua, /foo/?.lua"</code> and <code>debug.getinfo="@/foo/bar/baz.lua"</code> the possible module name is bar.baz or baz ''<br/>
-There are no way to know the real module name, in this case the debugger will use the shorter one, but the ideal is to avoid ambiguous lua_path with this mode.
-
-* '''Replace path Resolution'''
-This mode is a fallback. If the two previous one don't fit your needs, you could try it.
-In this mode, client talks with absolute path and server (IDE) uses relative path (relative to the buildpath).
-A path must be set in launchconfiguration to move from one world to another.<br/>
-
-''e.g: You set path with "/foo/bar/".<br/>
-when file path is sent from client (/foo/bar/baz/qux.lua), path will be removed (baz/qux.lua) and a file with this relative path will be searched in your buildpath.<br/>
-when file path is sent from server (baz/qux.lua), path will be add (/foo/bar/baz/qux.lua) and the absolute path will be sent to the client ''
-
-The problem is that you could set only one path.<br/>
-The path comparison is case sensitive (even on windows).<br/>
-On windows, you should prefix your path with "/" (e.g. /C:/foo/bar/)
-
-'''In all case, if file is not found in the workspace, the source code is sent via the DBGp protocol'''
-
-== Remote Debug  ==
-
-The Debugger of Lua Development Tools is based on the DBGp protocol, and the IDE implements a DBGp server.<br> To connect to this server, and begin remote/attach debugging, you need to use a [[Media:Debugger_lua.zip|DBGp Lua client]]. 
+The Debugger of Lua Development Tools is based on the DBGp protocol, and the IDE implements a DBGp server.<br> To connect to this server, and begin remote/attach debugging, you need to use a [[Media:Debugger_lua.zip|DBGp Lua client]]. TODO verify links
 
 === DBGp Client  ===
 
@@ -378,8 +327,129 @@ If needed, you can change the server port, in ''Window > Preferences > Dynamic L
 
 [[Image:DebugUI.png|center]]
 
+== Remote session ==
+
+To perform remote debugging, you have to install the LDT remote feature.
+Select the top menu ''Help/Install New Software...''
+[[Image:InstallSoftware.png|center]]
+
+Enter the LDT update site url, it should be ''http://download.eclipse.org/koneki/releases/stable'' for the stable release, but nighly or millestone update site url can be used.
+Select the remote feature in the list and install it.
+[[Image:remoteFeature.png|center]]
+
+In the Remote System Explorer perspective, in the new wizard, create a new ''Connection'' and select the ''Lua Ssh System'' kind of system.
+[[Image:createConnexion.png|center]]
+
+On the next page, enter the network name of your remote system, or directly the IP address.
+[[Image:createConnexionEnterIP.png|center]]
+
+If needed, configure runtime paths in ssh-lua sub-system advanced properties, if paths are not configured, the remote environement variables will be used. To change the properties, select the ssh lua node of you connection, then in the property view bellow push the ''show advanced properties'' button. You can edit properties values by slecting the appropriate cell. If you let some properties empty, the remote system lua default will be used. 
+Warning, LDT is not able to retrieve environement variables specfied in the user scope. For exemple, if the variable LUA_PATH is modified in the .profile or .bashrc files of the remote user, on runtime theses modification will not be taken in account.
+[[Image:remoteConnection.png|center]]
+
+In the top menu, select ''Run/Debug Configuration...''.
+[[Image:DebugConfiguration.png|center]]
+
+Then, create a Remote Lua Application launch configuration.
+Configure the project and the script to run, select also the remote system.
+[[Image:RemoteLaunchConf.png|center]]
+
+Following tab are also provided to configure your launch configuration:
+*''Arguments'': you can here specify script and remote interpreter arguments, type the argument as you do it in normal shell. At the bottom on the tab, you can also custom the location where file will be copied on the remote target, it's hightly recommanded to specify an absolute path.
+*''Environement'': Specify here some environement variable for the runtime. If the variable already exist on the remote system, the specifed value in the launch configuration will be append to the existing variable. Warning, as explain above, LDT is not able to retrieve environement variables values specfied in the user scope.
+*''Common'': Some common launch configuration related settings.
+**Save current launch configuration in a specified file.
+**See in favorite menu the launch conf is displayed.
+**Change the encoding of the launch configuration file.
+**Allocate  sandard input/output in a console and/or redirect standard output in a file.
+
+Launch the debug session, see how to [Debugging a Lua program] to continue.
+
+== Debugging a Lua program  ==
+
+=== Breakpoints, code navigation  ===
+
+You can set breakpoints at a particular file/line, you can do it with the regular double-click on margin: 
+
+[[Image:Dbg-setbreakpoint.png|center]] 
+
+You can optionally indicate conditions to stop execution only under specific circumstances: 
+
+[[Image:Dbg-openproperties.png|center]] 
+
+[[Image:Dbg-properties.png|center]] 
+
+#Enable or disable breakpoint globally.
+#Condition on hit count (stop only after the 3rd hit, every 4 hits, etc.).
+#Conditional breakpoint: you can put any expression, it will be evaluated using the local scope every time the breakpoint is hit, and stop only when the expression evaluates to true.
+
+Once a breakpoint has been hit, and the execution has actually stopped, you can use the '''Step Into''', '''Step Over''' and '''Step Return''' commands. 
+
+{{tip|Coroutine handling|When the current instruction is a <tt>coroutine.yield</tt> or a <tt>coroutine.resume</tt> step over will jump over the coroutine until the next resume or yield whereas step into will go into the coroutine and re-break as soon as possible.}}
+
+=== Environment inspection  ===
+
+When a breakpoint is reached, you can see any variable visible from any stack frame (local, upvalue and global variables). You can also change values to another.
+
+[[Image:Dbg-variables.png|center]] 
+
+{{Tip|New values are expressions|When you set a new value, it is evaluated as an expression, so <tt>math.sqrt</tt> will be evaluated to a function, if you want to put a literal string, use Lua syntax: <tt>"math.sqrt"</tt>. In particular you can change an entire table by another table expression. This is sometimes powerful and sometimes dangerous, be careful with that.}} 
+
+Some ''special'' values can also be displayed such as metatables or function environments (if it is different from global environment). You can also change these values.
+
+=== Interactive console and expressions  ===
+
+In addition to variable view, you have two other useful tools to evaluate some code snippets: expressions view and interactive console.
+
+[[Image:Dbg-expressions.png|frame|center|The expressions view allows you to re-evaluate complex expressions at each step]] 
+
+[[Image:Dbg-repl.png|frame|center|The interactive console allows you to type statements under the local scope]] 
+
+{{Warning|Always on top level|Due to a limitation in the DBGp protocol, the interactive console and expressions are always mapped to the top stack frame}}
+
+=== Source Mapping  ===
+The DBGp Server (IDE) and the DBGp client (running application) need to communicate about source files.
+
+''E.g. When you set a breakpoint, the IDE need to say to the running application on which file the breakpoint must be added.''
+
+''E.g. When the running application stops on a breakpoint of a file, the IDE must retrieve the file and open it.''
+
+The problem is that the file executed in your Lua VM could be physically different than the source file in your IDE (in your workspace).
+For example, in the case where your code is executed on a different host or just if your executed code is duplicated in another folder.
+
+To resolve this problem, LDT proposes to you different strategies, each with advantages and drawbacks :
+ 
+* '''Local Resolution'''
+This way to resolve the source mapping is the more simple and the more reliable. Both client and server works with absolute path. The IDE will search only in its buildpath a file which have the given absolute path. This means that executed file should be in your workspace (in your buildpath more exactly). So you can not use it to debug code on a remote host.
+
+* '''Module Resolution'''
+Both IDE and application have their own way to retrieve a module from its name. So we could use the module name has file ID instead of path.
+With this mode, you could do remote debugging without setting a list of path mapping.
+The limitation is that you should use the standard lua_path way to load module.
+Another problem is that we could not really retrieve the module name at client side, because the Lua debug api uses source path. The module name is retrieved from the path (from debug.getinfo) and the lua_path (package.path), so with ambiguous lua_path you could have insolvable conflict.<br/>
+''E.g: with <code>package.path = "/foo/bar/?.lua, /foo/?.lua"</code> and <code>debug.getinfo="@/foo/bar/baz.lua"</code> the possible module name is bar.baz or baz ''<br/>
+There are no way to know the real module name, in this case the debugger will use the shorter one, but the ideal is to avoid ambiguous lua_path with this mode.
+
+* '''Replace path Resolution'''
+This mode is a fallback. If the two previous one don't fit your needs, you could try it.
+In this mode, client talks with absolute path and server (IDE) uses relative path (relative to the buildpath).
+A path must be set in launchconfiguration to move from one world to another.<br/>
+
+''e.g: You set path with "/foo/bar/".<br/>
+when file path is sent from client (/foo/bar/baz/qux.lua), path will be removed (baz/qux.lua) and a file with this relative path will be searched in your buildpath.<br/>
+when file path is sent from server (baz/qux.lua), path will be add (/foo/bar/baz/qux.lua) and the absolute path will be sent to the client ''
+
+The problem is that you could set only one path.<br/>
+The path comparison is case sensitive (even on windows).<br/>
+On windows, you should prefix your path with "/" (e.g. /C:/foo/bar/)
+
+'''In all case, if file is not found in the workspace, the source code is sent via the DBGp protocol'''
+
 === Unsupported features  ===
 
 The '''dynamic code''' is not supported, it means that any code that is loaded with <tt>load</tt>, <tt>loadstring</tt> will not be supported. The debugger will step over it just like a C function. 
 
 The debugger is officially supported for Lua VM 5.1. Any other implementation (Lua 5.2, LuaJIT, ...) is not guaranteed to work at this time.
+
+
+
